# weaver

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  flake.nix
assets/: editor.yaml  generate_skybox_assets.sh  metalcube.glb  metalmonkey.glb  monkey.glb  wooden_monkey.glb
assets/maps/: .gitignore  ctf_gate1.bsp  oa_dm1.bsp
assets/materials/: credits.txt  metal.glb  wood_025.glb  wood_herringbone_tiles_004.glb  wood_tiles.glb
assets/meshes/: cube.glb  monkey_2x.glb  (+2 more)
benches/: fabricate.rs
crates/weaver-app/: Cargo.toml
crates/weaver-app/src/: commands.rs  lib.rs  plugin.rs  system.rs
crates/weaver-asset/: Cargo.toml
crates/weaver-asset/src/: lib.rs  loader.rs
crates/weaver-asset/src/loader/: image.rs  mesh.rs  mod.rs
crates/weaver-asset/src/loading/: mod.rs
crates/weaver-bsp/: Cargo.toml
crates/weaver-bsp/src/: generator.rs  lib.rs  loader.rs  parser.rs
crates/weaver-bsp/src/render/: extract.rs  mod.rs
crates/weaver-core/: Cargo.toml
crates/weaver-core/src/: app.rs  asset_server.rs  camera.rs  color.rs  doodads.rs  geometry.rs  input.rs  lib.rs  light.rs  material.rs  mesh.rs  texture.rs  time.rs  transform.rs  ui.rs
crates/weaver-core/src/ecs/: mod.rs  storage.rs
crates/weaver-core/src/renderer/: mod.rs  viewport.rs
crates/weaver-core/src/renderer/compute/: mod.rs  picking.rs
crates/weaver-core/src/renderer/internals/: cache.rs  component.rs  resource.rs  resource_manager.rs
crates/weaver-core/src/renderer/pass/: doodads.rs  hdr.rs  mod.rs  pbr.rs  shadow.rs  sky.rs
crates/weaver-core/src/scene/: mod.rs
crates/weaver-demo/: Cargo.toml
crates/weaver-demo/src/: camera.rs  main.rs  transform_gizmo.rs
crates/weaver-ecs/: Cargo.toml
crates/weaver-ecs/src/: bundle.rs  change.rs  change_detection.rs  commands.rs  component.rs  dyn_query.rs  entity.rs  lib.rs  loan.rs  node.rs  query.rs  relationship.rs  scene.rs  storage.rs  system.rs  system_schedule.rs  world.rs  world_view.rs
crates/weaver-ecs/src/reflect/: mod.rs  registry.rs
crates/weaver-ecs/src/reflect/impls/: glam.rs  mod.rs
crates/weaver-editor/: Cargo.toml
crates/weaver-editor/src/: camera.rs  inspect.rs  main.rs  transform_gizmo.rs
crates/weaver-egui/: Cargo.toml
crates/weaver-egui/src/: lib.rs
crates/weaver-gizmos/: Cargo.toml
crates/weaver-gizmos/src/: lib.rs
crates/weaver-pbr/: Cargo.toml
crates/weaver-pbr/src/: camera.rs  lib.rs  light.rs  material.rs  prepass.rs  render.rs  skybox.rs
crates/weaver-pbr/src/assets/: material_mesh.rs  mod.rs
crates/weaver-pbr/src/skybox/: irradiance.rs  mod.rs
crates/weaver-q3/: .gitignore  Cargo.toml
crates/weaver-q3/src/: lib.rs  pk3.rs
crates/weaver-q3/src/bsp/: generator.rs  loader.rs  mod.rs  parser.rs
crates/weaver-q3/src/bsp/render/: extract.rs  mod.rs
crates/weaver-q3/src/shader/: lexer.rs  loader.rs  mod.rs  parser.rs
crates/weaver-q3/src/shader/render/: extract.rs  mod.rs
crates/weaver-raytracing/: Cargo.toml
crates/weaver-raytracing/assets/: raytracing.wgsl
crates/weaver-raytracing/src/: lib.rs  light.rs  material.rs  render.rs
crates/weaver-raytracing/src/geometry/: mod.rs
crates/weaver-renderer/: Cargo.toml
crates/weaver-renderer/src/: asset.rs  bind_group.rs  buffer.rs  camera.rs  clear_color.rs  draw_fn.rs  extract.rs  graph.rs  hdr.rs  lib.rs  pipeline.rs  render_command.rs  render_phase.rs  resources.rs  shader.rs  target.rs  texture.rs  transform.rs
crates/weaver-renderer/src/mesh/: mod.rs  primitive.rs
crates/weaver-renderer/src/resource/: mod.rs
crates/weaver-util/: Cargo.toml
crates/weaver-util/src/: atomic_id.rs  intern.rs  label.rs  lib.rs  lock.rs  logging.rs  maps.rs  sorted_vec.rs
crates/weaver-winit/: Cargo.toml
crates/weaver-winit/src/: lib.rs
devlogs/: TODOs.md  Weaver Dev Log 1.md  Weaver Dev Log 2.md  Weaver Dev Log 3.md  Weaver Dev Log 4.md  Weaver Dev Log 5.md  Weaver Dev Log 6.md  Weaver Dev Log 7.md
examples/weaver-demo/: Cargo.toml
examples/weaver-demo/src/: camera.rs  main.rs
fabricate/: Cargo.toml  LICENSE-APACHE  README.md
fabricate/fabricate-macro/: Cargo.toml
fabricate/fabricate-macro/src/: inspect.rs  lib.rs
fabricate/src/: bundle.rs  commands.rs  component.rs  graph.rs  lib.rs  lock.rs  query.rs  registry.rs  relationship.rs  storage.rs  system.rs  world.rs
fabricate/src/component/: mod.rs  runtime.rs
fabricate/src/script/: interp.rs  loom.pest  mod.rs  parser.rs  value.rs
fabricate/src/script/test-scripts/: test1.loom
src/: lib.rs  main.rs
weaver-bench/: Cargo.toml
weaver-bench/src/: bench.rs  lib.rs  main.rs
weaver-core/: Cargo.toml
weaver-core/src/: aabb.rs  app.rs  asset_server.rs  camera.rs  color.rs  commands.rs  doodads.rs  geom.rs  input.rs  lib.rs  light.rs  material.rs  mesh.rs  model.rs  particles.rs  physics.rs  relations.rs  scripts.rs  system.rs  texture.rs  time.rs  transform.rs  ui.rs
weaver-core/src/ecs/: component.rs  mod.rs  query.rs  system.rs  world.rs
weaver-core/src/ecs_ext/: inspect.rs  mod.rs
weaver-core/src/renderer/: mod.rs  viewport.rs
weaver-core/src/renderer/compute/: hdr_loader.rs  mod.rs
weaver-core/src/renderer/internals/: cache.rs  component.rs  resource.rs
weaver-core/src/renderer/pass/: doodads.rs  hdr.rs  mod.rs  particles.rs  pbr.rs  shadow.rs  sky.rs
weaver-core/src/scene/: mod.rs  node.rs
weaver-core/src/util/: lock.rs
weaver-ecs/: Cargo.toml  README.md
weaver-ecs/src/: archetype.rs  bundle.rs  commands.rs  component.rs  component_impl.rs  entity.rs  id.rs  lib.rs  query.rs  registry.rs  resource.rs  storage.rs  system.rs  world.rs
weaver-ecs/src/script/: build.rs  interp.rs  loom.pest  loom.tmLanguage.json  mod.rs  parser.rs  value.rs
weaver-ecs/test-scripts/: query.loom  test.loom
weaver-editor/: Cargo.toml
weaver-editor/src/: main.rs  state.rs
weaver-editor/src/scene/: mod.rs
weaver-editor/src/ui/: component_inspector.rs  fps_counter.rs  mod.rs  scene_tree.rs  script.rs  syntax_highlighting.rs
weaver-game/: Cargo.toml
weaver-game/src/: camera.rs  main.rs  maps.rs  materials.rs  npc.rs  player.rs
weaver-proc-macro/: Cargo.toml
(+145 files in other folders)
