[package]
name = "weaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/weaver-app",
    "crates/weaver-demo",
    "crates/weaver-util",
    "crates/weaver-ecs",
    "crates/weaver-renderer",
    "crates/weaver-winit",
    "crates/weaver-pbr",
    "crates/weaver-core",
    "crates/weaver-asset",
    "crates/weaver-diagnostics",
    "crates/weaver-asset-macros",
    "crates/weaver-ecs-macros",
    "crates/weaver-event",
    "crates/weaver-gizmos",
    "crates/weaver-q3", 
    "crates/weaver-egui", "crates/weaver-raytracing",
]

[features]
default = []

[lib]
name = "weaver"
path = "src/lib.rs"

[dependencies]

weaver-app = { path = "crates/weaver-app" }
weaver-util = { path = "crates/weaver-util" }
weaver-ecs = { path = "crates/weaver-ecs" }
weaver-renderer = { path = "crates/weaver-renderer" }
weaver-winit = { path = "crates/weaver-winit" }
weaver-pbr = { path = "crates/weaver-pbr" }
weaver-core = { path = "crates/weaver-core" }
weaver-asset = { path = "crates/weaver-asset" }
weaver-event = { path = "crates/weaver-event" }
weaver-gizmos = { path = "crates/weaver-gizmos" }

[dev-dependencies]
criterion = "0.5"

[profile.release]
debug = true
opt-level = 3
# codegen-units = 1
# lto = "thin"
