[package]
name = "weaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[features]
default = []

[lib]
name = "weaver"
path = "src/lib.rs"

[dependencies]
weaver-app = { path = "crates/weaver-app" }
weaver-util = { path = "crates/weaver-util" }
weaver-ecs = { path = "crates/weaver-ecs" }
weaver-renderer = { path = "crates/weaver-renderer" }
weaver-winit = { path = "crates/weaver-winit" }
weaver-pbr = { path = "crates/weaver-pbr" }
weaver-core = { path = "crates/weaver-core" }
weaver-asset = { path = "crates/weaver-asset" }
weaver-event = { path = "crates/weaver-event" }
weaver-gizmos = { path = "crates/weaver-gizmos" }
weaver-diagnostics = { path = "crates/weaver-diagnostics" }
weaver-egui = { path = "crates/weaver-egui" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pollster = "0.4"

# [[bench]]
# name = "weaver"
# harness = false

[[example]]
name = "weaver-demo"
path = "examples/weaver-demo/src/main.rs"
