
[package]
name = "fabricate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
glam = ["dep:glam"]
default = []

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bytemuck = { version = "1.14", features = ["derive"] }
derive_more = "0.99.17"
parking_lot = { version = "0.12.1", features = ["send_guard", "serde"] }
rustc-hash = "1.1.0"
serde = { version = "1.0.196", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.113"
petgraph = { version = "0.6.4", features = ["serde-1"] }
fabricate-macro = { path = "fabricate-macro" }
pest = "2.7.6"
pest_derive = "2.7.6"
typed-arena = "2.0.2"
log = "0.4.20"
glam = { version = "0.24", features = ["serde"], optional = true }
bitvec = "1.0.1"
