
[package]
name = "weaver-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.12.1"
hecs = "0.10.4"
weaver-ecs = { path = "../weaver-ecs" }

[profile.release]
debug = true
opt-level = 3
