
[package]
name = "weaver-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weaver-bench"
path = "src/main.rs"

[[bench]]
name = "weaver-bench"
path = "src/bench.rs"
harness = false

[dependencies]
weaver-ecs = { path = "../weaver-ecs", features = [] }

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true
opt-level = 3
