
[package]
name = "weaver-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weaver-bench"
path = "src/main.rs"

[[bench]]
name = "weaver-bench"
path = "src/bench.rs"
harness = false

[dependencies]
weaver-ecs = { path = "../weaver-ecs", features = [] }
weaver-proc-macro = { path = "../weaver-proc-macro", features = [] }
fabricate = { path = "../../fabricate" }
criterion = "0.5.1"
hecs = "0.10.4"
rand = "0.8.4"
