[package]
name = "weaver-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
rustc-hash = "1.1"
petgraph = "0.6"
rayon = "1.8"
crossbeam-channel = "0.5"
atomic_refcell = "0.1.13"
weaver-proc-macro = { path = "../weaver-proc-macro" }
