[package]
name = "weaver-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []
default = []

[dependencies]
anyhow = "1.0"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
rustc-hash = "1.1"
petgraph = "0.6"
rayon = "1.8"
crossbeam-channel = "0.5"
atomic_refcell = "0.1.13"
weaver-proc-macro = { path = "../weaver-proc-macro" }
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4"
static_assertions = "1.1.0"
bit-set = "0.5.3"
fixedbitset = "0.4.2"
pest = { version = "2.7.6", features = ["pretty-print"] }
pest_derive = "2.7.6"
glam = "0.24"
typed-arena = "2.0"
impls = "1"

[dev-dependencies]
env_logger = "0.11.0"
