[package]
name = "weaver-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atomic_refcell = "0.1.13"
bit-set = "0.5.3"
bytemuck = "1.14"
crossbeam-channel = "0.5"
fixedbitset = "0.4.2"
glam = "0.24"
impls = "1"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
pest = { version = "2.7.6" }
pest_derive = "2.7.6"
petgraph = "0.6"
rayon = "1.8"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1.0"
typed-arena = "2.0"
weaver-proc-macro = { path = "../weaver-proc-macro" }

[dev-dependencies]
env_logger = "0.11.0"
