[package]
name = "weaver-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
egui = "0.25.0"
env_logger = "0.11.0"
log = "0.4.20"
syntect = "5"
weaver = { path = "../" }
bitflags = "2.4"
egui_dock = "0.10"
fabricate = { path = "../fabricate" }
bytemuck = "1.14"
