[package]
name = "weaver-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
weaver = { path = "../" }
