[package]
name = "weaver-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
] }
rayon = "1.10.0"
crossbeam-channel = "0.5.0"
petgraph = "0.6.5"

weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-event = { path = "../weaver-event" }
