[package]
name = "weaver-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
] }

weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-event = { path = "../weaver-event" }
weaver-task = { path = "../weaver-task" }
