[package]
name = "weaver-asset"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "8.6"

weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-app = { path = "../weaver-app" }
weaver-asset-macros = { path = "../weaver-asset-macros" }
weaver-event = { path = "../weaver-event" }
weaver-task = { path = "../weaver-task" }
