[package]
name = "weaver-bsp"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1"
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

weaver-app = { path = "../weaver-app" }
weaver-pbr = { path = "../weaver-pbr" }
weaver-asset = { path = "../weaver-asset" }
weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core", features = ["serde"] }
