[package]
name = "weaver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
image = "0.25.1"
winit = "0.29.15"
tobj = "4.0.2"
gltf = "1.4.1"
encase = { version = "0.8", features = ["glam"] }

weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-app = { path = "../weaver-app" }
weaver-asset = { path = "../weaver-asset" }
