[package]
name = "weaver-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["glam/serde"]

[dependencies]
bytemuck = { version = "1.7.0", features = ["derive"] }
glam = { version = "0.33.1", features = ["bytemuck", "encase"] }
encase = { version = "0.12.0", features = [] }
image = "0.25.10"
winit = "0.30"
tobj = "4.0.2"
gltf = "1.4.1"


weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-app = { path = "../weaver-app" }
weaver-asset = { path = "../weaver-asset" }
