[package]
name = "weaver-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
egui_plot = "0.27"

weaver = { path = "../../" }
weaver-egui = { path = "../weaver-egui" }
weaver-diagnostics = { path = "../weaver-diagnostics" }
weaver-q3 = { path = "../weaver-q3" }
