[package]
name = "weaver-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_plot = "0.29"

weaver = { path = "../../" }
weaver-diagnostics = { path = "../weaver-diagnostics" }
weaver-egui = { path = "../weaver-egui" }
weaver-raytracing = { path = "../weaver-raytracing" }
