[package]
name = "weaver-ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.5"
itertools = "0.13.0"
static_assertions = "1.1.0"
glam = "0.27.0"
rayon = "1.10.0"
atomic_refcell = "0.1.13"
async-channel = "2.3.1"
any_vec = "0.14.0"
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
pollster = "0.4"

weaver-util = { path = "../weaver-util" }
weaver-ecs-macros = { path = "../weaver-ecs-macros" }

[dev-dependencies]
env_logger = "*"
