[package]
name = "weaver-ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = "0.6.5"
itertools = "0.13.0"
static_assertions = "1.1.0"
glam = "0.27.0"
async-channel = "2.3.1"
any_vec = "0.14.0"
futures = "0.3"
crossbeam-channel = "0.5"

weaver-task = { path = "../weaver-task" }
weaver-util = { path = "../weaver-util" }
weaver-ecs-macros = { path = "../weaver-ecs-macros" }

[dev-dependencies]
env_logger = "*"
