[package]
name = "weaver-ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = "0.8.3"
itertools = "0.14.0"
any_vec = "0.15.0"
crossbeam-channel = "0.5"

weaver-task = { path = "../weaver-task" }
weaver-util = { path = "../weaver-util" }
weaver-ecs-macros = { path = "../weaver-ecs-macros" }

[dev-dependencies]
env_logger = "*"
