[package]
name = "weaver-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.29"
egui-wgpu = { version = "0.29", features = ["winit"] }
egui-winit = { version = "0.29", default-features = false, features = [
    "wayland",
    "x11",
] }

weaver-util = { path = "../weaver-util" }
weaver-renderer = { path = "../weaver-renderer" }
weaver-winit = { path = "../weaver-winit" }
weaver-app = { path = "../weaver-app" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-event = { path = "../weaver-event" }
