[package]
name = "weaver-gizmos"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.7.0"

weaver-util = { path = "../weaver-util" }
weaver-renderer = { path = "../weaver-renderer" }
weaver-app = { path = "../weaver-app" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-asset = { path = "../weaver-asset" }
weaver-pbr = { path = "../weaver-pbr" }
