[package]
name = "weaver-pbr"
version = "0.1.0"
edition = "2024"

[dependencies]
gltf = "1.4.1"
bytemuck = "1.7.0"
encase = "0.8.0"
image = "0.24"
glam = { version = "0.28", features = ["bytemuck"] }
ktx2 = "0.3.0"
tobj = "4.0.2"
uuid = "1.9.1"

weaver-util = { path = "../weaver-util" }
weaver-renderer = { path = "../weaver-renderer" }
weaver-app = { path = "../weaver-app" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-asset = { path = "../weaver-asset" }
