[package]
name = "weaver-q3"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7.1"
encase = { version = "0.12.0", features = [] }
bytemuck = "1.16"

weaver-app = { path = "../weaver-app" }
weaver-pbr = { path = "../weaver-pbr" }
weaver-asset = { path = "../weaver-asset" }
weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-renderer = { path = "../weaver-renderer" }
