[package]
name = "weaver-raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
encase = { version = "0.8", features = ["glam"] }
bytemuck = "1.20"
rand = "0.8"

weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-renderer = { path = "../weaver-renderer" }
weaver-app = { path = "../weaver-app" }
weaver-asset = { path = "../weaver-asset" }
