[package]
name = "weaver-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
naga_oil = "0.13"
wgpu = { version = "0.19.4", features = ["naga-ir"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
encase = { version = "0.8", features = ["glam"] }
bytemuck = { version = "1.16", features = ["derive"] }
winit = "0.29.15"
pollster = "0.3.0"
petgraph = "0.6.5"

weaver-app = { path = "../weaver-app" }
weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-asset = { path = "../weaver-asset" }
weaver-winit = { path = "../weaver-winit" }
weaver-event = { path = "../weaver-event" }
