[package]
name = "weaver-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
naga_oil = "0.15"
wgpu = { version = "22.1", features = ["naga-ir"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
encase = { version = "0.8", features = ["glam"] }
bytemuck = { version = "1.16", features = ["derive"] }
winit = "0.29.15"
pollster = "0.3.0"
petgraph = "0.6.5"
crossbeam-channel = "0.5"
tokio = { version = "1.41", features = ["full"] }

weaver-app = { path = "../weaver-app" }
weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-asset = { path = "../weaver-asset" }
weaver-winit = { path = "../weaver-winit" }
weaver-event = { path = "../weaver-event" }
