[package]
name = "weaver-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
naga_oil = "0.20.0"
wgpu = { version = "27.0.1", features = ["naga-ir"] }
bytemuck = { version = "1.7.0", features = ["derive"] }
glam = { version = "0.30.9", features = ["bytemuck", "encase"] }
encase = { version = "0.12.0", features = [] }
pollster = "0.4.0"
crossbeam-channel = "0.5"

weaver-app = { path = "../weaver-app" }
weaver-util = { path = "../weaver-util" }
weaver-ecs = { path = "../weaver-ecs" }
weaver-core = { path = "../weaver-core" }
weaver-asset = { path = "../weaver-asset" }
weaver-winit = { path = "../weaver-winit" }
weaver-event = { path = "../weaver-event" }
