[package]
name = "weaver-util"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"] }
lock_api = "0.4.0"
anyhow = { version = "1.0", features = ["backtrace"] }
downcast-rs = "1.0.0"
atomic_refcell = "0.1.13"
rustc-hash = "2.0"
scopeguard = "1.2"
lazy_static = "1.5"
hashbrown = { version = "0.15", features = [] }
indextree = "4.6"
thiserror = "2.0"
