[package]
name = "weaver-demo"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weaver = { path = "../../" }
weaver-diagnostics = { path = "../../crates/weaver-diagnostics" }

[profile.release]
debug = true
opt-level = 3
